# Titanic_ML_AI

./: README.md  hybrid_ai_ml_submission.csv  pyproject.toml
Titanic_code/: ai_checker.py
shared/: config.py  schemas.py
