[project]
name = "titanic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "openai-agents>=0.17.4",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "xgboost>=3.2.0",
]
